--- a/css/cart.css
+++ b/css/cart.css
@@ -1,14 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Baloo+Bhaijaan|Ubuntu');
-
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-image: url('/IMG/The Arcade - Vaporwave.png');
+  background-image: url('/IMG/The\ Arcade\ -\ Vaporwave.png');
   background-size: cover;
   background-position: center;
   background-repeat: repeat;
 }
-
 header {
   background-color: #555;
   padding: 10px;
@@ -17,7 +14,7 @@ header {
 
 nav {
   display: flex;
-  justify-content: center;
+  justify-content: center ;
   background-color: #444;
 }
 
@@ -41,8 +38,8 @@ nav a {
   transition: background-color 0.3s;
   margin: auto;
   border-radius: 10px;
-  padding-bottom: 10px;
-  justify-content: left;
+ padding-bottom: 10px;
+ justify-content: left;
 
 }
 
@@ -52,160 +49,84 @@ nav a:hover {
   border-radius: 10px;
 }
 
-img {
+img  {
   width: 100%;
 }
 
 
 .top {
-  color: red;
+  color:red ;
   display: block;
 }
-
 .section-container {
   display: flex;
   width: 100%;
 }
 
 .image-section {
-  flex: 1;
-  /* Take up 50% of the container */
+  flex: 1; /* Take up 50% of the container */
 }
 
 .image-section img {
-  width: 100%;
-  /* Make the image fill the container */
-  height: auto;
-  /* Maintain the aspect ratio */
+  width: 100%; /* Make the image fill the container */
+  height: auto; /* Maintain the aspect ratio */
 }
 
-.payment {
-  background: #f8f8f8;
-  max-width: 360px;
-  margin: 80px auto;
-  height: auto;
-  padding: 35px;
-  padding-top: 70px;
-  border-radius: 5px;
-  position: relative;
+@media (max-width: 768px) {
+  .image-section img {
+    max-width: 100%; /* Limit the image width to prevent overflow on smaller screens */
+  }
+}
+/* Styling for form container */
+#paymentForm {
+  width: 300px;
+  margin: 0 auto;
+  background-color: whitesmoke;
+  justify-content: center;
+  padding: 20px;
+  color: black;
+  border: 1px solid black;
+  padding-right: 40px;
+  border-radius: 10px;
+  border-color:transparent ;
+  margin-top: 70px;
+  
 }
 
-.payment h2 {
-  text-align: center;
-  letter-spacing: 2px;
-  margin-bottom: 40px;
-  color: #555555;
-}
-
-.form .label {
-  display: block;
-  color: #555555;
-  margin-bottom: 6px;
-}
-
-.input {
-  padding: 13px 0px 13px 25px;
-  width: 100%;
-  text-align: center;
-  border: 2px solid #dddddd;
-  border-radius: 5px;
-  letter-spacing: 1px;
-  word-spacing: 3px;
-  outline: none;
-  padding-left: 10px;
-  font-size: 16px;
-  color: #555555;
-}
-
-.card-grp {
-  display: flex;
-  justify-content: space-between;
-}
-
-.card-item {
-  width: 48%;
-}
-
-.space {
+/* Styling for form groups */
+.form-group {
   margin-bottom: 20px;
 }
 
-.icon-relative {
-  position: relative;
+/* Styling for labels */
+label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
 }
 
-.icon-relative .fas,
-.icon-relative .far {
-  position: absolute;
-  bottom: 12px;
-  left: 15px;
-  font-size: 20px;
-  color: #555555;
+/* Styling for input fields */
+input[type="email"],
+input[type="tel"],
+input[type="text"] {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
 
-.btn {
-  margin-top: 40px;
-  background: #555555;
-  padding: 12px;
-  text-align: center;
-  color: #f8f8f8;
-  border-radius: 5px;
+/* Styling for submit button */
+button[type="submit"] {
+  background-color: #555;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
   cursor: pointer;
 }
 
-.btn:hover {
-  background-color: #ddd;
-  /* Change this to the desired color on hover */
-  transition: 0.3s;
+button[type="submit"]:hover {
+  background-color: whitesmoke;
+  transition: 0.5s;
   color: black;
-}
-
-
-
-.payment-logo {
-  position: absolute;
-  top: -50px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100px;
-  height: 100px;
-  background: #f8f8f8;
-  border-radius: 50%;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  text-align: center;
-  line-height: 85px;
-}
-
-.payment-logo:before {
-  content: "";
-  position: absolute;
-  top: 5px;
-  left: 5px;
-  width: 90px;
-  height: 90px;
-  background: #555555;
-  border-radius: 50%;
-}
-
-.payment-logo p {
-  position: relative;
-  color: #f8f8f8;
-  font-family: Arial, sans-serif;
-  font-size: 58px;
-}
-
-
-@media screen and (max-width: 420px) {
-  .card-grp {
-    flex-direction: column;
-  }
-
-  .card-item {
-    width: 100%;
-    margin-bottom: 20px;
-  }
-
-  .btn {
-    margin-top: 20px;
-  }
 }
