--- a/css/home.css
+++ b/css/home.css
@@ -130,12 +130,13 @@ main {
   
 }
 .content-section {
-  width: 100%;
+  max-width: 100%;
   margin: 20px auto;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   grid-gap: 20px;
   padding: 0 20px;
+
 }
 
 @media (max-width: 768px) {
